--- a/text/latex_text/kapitoly/teorie/5_pouzite_programove_prostredky.tex
+++ b/text/latex_text/kapitoly/teorie/5_pouzite_programove_prostredky.tex
@@ -41,13 +41,14 @@ Databázi PostgreSQL lze v ArcGIS produktech použít dvojím způsobem. Buď je
                 {\color{purpurova7}PostgreSQL} & {\color{purpurova7} PostGIS} & {\color{purpurova7}ArcGIS} & {\color{purpurova7}podporovaná architektura} \\ 
                 \hline 
                 9.3 & \multicolumn{3}{>{\cellcolor{lightgray}}c|}{PostgreSQL 9.3 není zatím podporováno produkty ArcGIS} \\ 
-                    9.1 (64-bit) & 2.0 (64-bit) & 10.1 SP1 & Linux 64-bit (x86\_64), Windows 64-bit \\ 
-                    9.0 (64-bit) & 1.5* (64-bit) & 10.1 SP1 & Linux 64-bit (x86\_64), Windows 64-bit \\ 
-                    9.0 (64-bit) & 1.5* (64-bit) & 10.1 & Linux 64-bit (x86\_64), Windows 64-bit \\ 
+                    9.1 (64-bit) & 2.0 (64-bit) & 10.1 SP1\textsuperscript{1} & Linux 64-bit (x86\_64), Windows 64-bit \\ 
+                    9.0 (64-bit) & 1.5\textsuperscript{2} (64-bit) & 10.1 SP1\textsuperscript{1} & Linux 64-bit (x86\_64), Windows 64-bit \\ 
+                    9.0 (64-bit) & 1.5\textsuperscript{2} (64-bit) & 10.1 & Linux 64-bit (x86\_64), Windows 64-bit \\ 
                          8.3/8.4 & 1.4 & 10.0 & Linux 64-bit (x86\_64), Windows 64-bit \\ 
                 \hline 
-                \multicolumn{4}{l}{\scriptsize{*není podporováno ve verzi Windows 64-bit}} \\ 
-                \multicolumn{4}{l}{\scriptsize{zdroj: http://support.esri.com/en/knowledgebase/techarticles/detail/40553}} \\ 
+                \multicolumn{4}{l}{{\cellcolor{white}}\scriptsize{\textsuperscript{1}Service Pack 1}} \\ 
+                \multicolumn{4}{l}{\scriptsize{\textsuperscript{2}není podporováno ve verzi Windows 64-bit}} \\ 
+                \multicolumn{4}{l}{{\cellcolor{white}}\scriptsize{zdroj: http://support.esri.com/en/knowledgebase/techarticles/detail/40553}} \\ 
               \end{tabular}
             \end{center}
           \end{footnotesize}
