--- a/text/latex_text/Solanska_DP.tex
+++ b/text/latex_text/Solanska_DP.tex
@@ -116,7 +116,7 @@ Tato práce zhodnotila možnosti replikačních řešení a základě toho navrh
 
 Na základě rešerše byl vybrán databázový server PostgreSQL, který je možno použít v kombinaci s produkty ArcGIS produkty, což byl jeden z hlavních požadavků pro výběr databázového systému. Byl sestaven návrh databázového řešení který zohledňuje všechny požadavky katedry a možnosti daných technologií. Bylo vytvořeno testovací prostředí na serveru poskytnutém katedrou, na němž byly dané procesy otestovány. Na základě toho pak byl sepsán podrobný popis toho, jak nastavit replikaci ve variantě streaming a Slony-I. Návrh zahrnul také možnost použití nástroje pro rozložení zátěže mezi servery v databázovém řešení.
 
-Návrh databázového řešení slibuje zvyšení interoperability,  usnadnění sdílení dat a řešení licenčních podmínek, dále zajištění vysoké dostupnosti a aktuálnosti dat. Studenti navíc budou mít možnost vyzkoušet si práci s databází, která je může lépe připravit na budoucí zaměstání.:
+Návrh databázového řešení slibuje zvyšení interoperability,  usnadnění sdílení dat a řešení licenčních podmínek, dále zajištění vysoké dostupnosti a aktuálnosti dat. Studenti navíc budou mít možnost vyzkoušet si práci s databází, která je může lépe připravit na budoucí zaměstání.
     %------------------------------------------------------------------------- LITERATURA
     \makeBibliography{literatura}
     %\bibliography{literatura}
